# unified-tensor-system

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  BOOTSTRAP_DIRECTIVE.md  CLAUDE_CODE_IMPLEMENTATION_PLAN.md  COLLAB.md  FICUTS.md  FICUTS_COMPLETE.md  FICUTS_v2.1_FINAL.md  FICUTS_v3.0_UNIFIED.md  GPU_HARDWARE_LEARNING.md  LAYER 6 Internet Ingestion.txt  LOGIC_FLOW.md  PREDICTION_DRIVEN_LEARNING.md  README.md  TECHNICAL_BRIEF.md  TODO.md  UNIFIED_DEQ_ARCHITECTURE.md  UNIFIED_REASONING_ARCHITECTURE.md  conftest.py  deep-research-report.md  fix_discovery_and_scrapling.py  fix_overlap_and_discovery.py  fix_overlap_cli.py  nohup.out  pyproject.toml  run_autonomous.py  run_explorer.py  run_session2.py  run_system.py  test_gradient_descent.txt  test_linear_algebra.txt
.planning/: 01-01-PLAN.md  02-01-PLAN.md  03-01-PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md
benchmarks/: __init__.py  competing_surfaces.py  coupled_trimode_atlas.py  instability_lead_time.py  multimode_eigen_walker.py  rational_atlas.py  trimode_atlas.py  walker_vs_random.py
codegen/: __init__.py  borrow_predictor.py  feedback.jsonl  feedback_store.py  intent_spec.py  pipeline.py  template_registry.py
examples/: ieee39_demo.py
figures/: plot_error_vs_zeta.py
investor_brief/: investor_brief.tex
ip/: provisional_2_regime_classification.txt  provisional_3_code_synthesis.txt  provisional_4_runtime_validation.txt  provisional_5_platform_integration.txt
licensing_targets/: licensing_targets.tex
optimization/: __init__.py  circuit_optimizer.py  code_gen_experiment.py  (+21 more)
(+624 files in other folders)
